describe what you did

--- a/notebooks/01_data_cleaning_and_eda.ipynb
+++ b/notebooks/01_data_cleaning_and_eda.ipynb
@@ -18,10 +18,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bb1f6560",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>p8fjkv0 2</th>\n",
+       "      <th>p8fjkv0 3</th>\n",
+       "      <th>p8fjkv0 4</th>\n",
+       "      <th>p8fjkv0 5</th>\n",
+       "      <th>p8fjkv0 6</th>\n",
+       "      <th>p8fjkv0 7</th>\n",
+       "      <th>p8fjkv0 17</th>\n",
+       "      <th>p8fjkv0 18</th>\n",
+       "      <th>p8fjkv0 23</th>\n",
+       "      <th>p8fjkv0 26</th>\n",
+       "      <th>p8fjkv0 27</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Territory Manager - WA</td>\n",
+       "      <td>at</td>\n",
+       "      <td>Hill's Pet Nutrition</td>\n",
+       "      <td>Strong applicant</td>\n",
+       "      <td>This is a Full time job</td>\n",
+       "      <td>Perth WA</td>\n",
+       "      <td>(Sales)</td>\n",
+       "      <td>Featured</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sales Representative</td>\n",
+       "      <td>at</td>\n",
+       "      <td>Australian Crushing and Belting Group Pty Ltd</td>\n",
+       "      <td>This is a Full time job</td>\n",
+       "      <td>Perth WA</td>\n",
+       "      <td>$90,000 – $110,000 p.a + Super + Car + Bonuses</td>\n",
+       "      <td>(Sales)</td>\n",
+       "      <td>Featured</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Territory Manager</td>\n",
+       "      <td>at</td>\n",
+       "      <td>Peters Ice Cream</td>\n",
+       "      <td>This is a Full time job</td>\n",
+       "      <td>Perth WA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(Sales)</td>\n",
+       "      <td>6d ago</td>\n",
+       "      <td>,</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Territory Manager - WA</td>\n",
+       "      <td>at</td>\n",
+       "      <td>Hill's Pet Nutrition</td>\n",
+       "      <td>Strong applicant</td>\n",
+       "      <td>This is a Full time job</td>\n",
+       "      <td>Perth WA</td>\n",
+       "      <td>(Sales)</td>\n",
+       "      <td>26d ago</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Trade Retail Sales</td>\n",
+       "      <td>at</td>\n",
+       "      <td>THE PLANET GROUP</td>\n",
+       "      <td>Strong applicant</td>\n",
+       "      <td>This is a Full time job</td>\n",
+       "      <td>Rivervale</td>\n",
+       "      <td>(Retail &amp; Consumer Products)</td>\n",
+       "      <td>8d ago</td>\n",
+       "      <td>Perth WA</td>\n",
+       "      <td>$27 – $35 per hour</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                p8fjkv0 2 p8fjkv0 3  \\\n",
+       "0  Territory Manager - WA        at   \n",
+       "1    Sales Representative        at   \n",
+       "2       Territory Manager        at   \n",
+       "3  Territory Manager - WA        at   \n",
+       "4      Trade Retail Sales        at   \n",
+       "\n",
+       "                                       p8fjkv0 4                p8fjkv0 5  \\\n",
+       "0                           Hill's Pet Nutrition         Strong applicant   \n",
+       "1  Australian Crushing and Belting Group Pty Ltd  This is a Full time job   \n",
+       "2                               Peters Ice Cream  This is a Full time job   \n",
+       "3                           Hill's Pet Nutrition         Strong applicant   \n",
+       "4                               THE PLANET GROUP         Strong applicant   \n",
+       "\n",
+       "                 p8fjkv0 6                                       p8fjkv0 7  \\\n",
+       "0  This is a Full time job                                        Perth WA   \n",
+       "1                 Perth WA  $90,000 – $110,000 p.a + Super + Car + Bonuses   \n",
+       "2                 Perth WA                                             NaN   \n",
+       "3  This is a Full time job                                        Perth WA   \n",
+       "4  This is a Full time job                                       Rivervale   \n",
+       "\n",
+       "                     p8fjkv0 17 p8fjkv0 18 p8fjkv0 23          p8fjkv0 26  \\\n",
+       "0                       (Sales)   Featured        NaN                 NaN   \n",
+       "1                       (Sales)   Featured        NaN                 NaN   \n",
+       "2                       (Sales)     6d ago          ,                 NaN   \n",
+       "3                       (Sales)    26d ago        NaN                 NaN   \n",
+       "4  (Retail & Consumer Products)     8d ago   Perth WA  $27 – $35 per hour   \n",
+       "\n",
+       "  p8fjkv0 27  \n",
+       "0        NaN  \n",
+       "1        NaN  \n",
+       "2        NaN  \n",
+       "3        NaN  \n",
+       "4        NaN  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import re\n",
@@ -74,10 +225,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7915c36a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'raw_0'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/seek-perth-jobs-analysis/.venv/lib/python3.14/site-packages/pandas/core/indexes/base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mKeyError\u001b[39m: 'raw_0'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m clean = pd.DataFrame()\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m clean[\u001b[33m'\u001b[39m\u001b[33mjob_title\u001b[39m\u001b[33m'\u001b[39m] = \u001b[43mraw\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mraw_0\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m      3\u001b[39m clean[\u001b[33m'\u001b[39m\u001b[33mcompany\u001b[39m\u001b[33m'\u001b[39m] = raw[\u001b[33m'\u001b[39m\u001b[33mraw_2\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      4\u001b[39m clean[\u001b[33m'\u001b[39m\u001b[33mcategory\u001b[39m\u001b[33m'\u001b[39m] = raw[\u001b[33m'\u001b[39m\u001b[33mraw_6\u001b[39m\u001b[33m'\u001b[39m]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/seek-perth-jobs-analysis/.venv/lib/python3.14/site-packages/pandas/core/frame.py:4113\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4111\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4112\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4113\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4114\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4115\u001b[39m     indexer = [indexer]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/seek-perth-jobs-analysis/.venv/lib/python3.14/site-packages/pandas/core/indexes/base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
+      "\u001b[31mKeyError\u001b[39m: 'raw_0'"
+     ]
+    }
+   ],
    "source": [
     "clean = pd.DataFrame()\n",
     "clean['job_title'] = raw['raw_0']\n",
@@ -264,7 +437,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
